--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "devDependencies": {
     "@commitlint/cli": "^19.1.0",
     "@commitlint/config-conventional": "^19.1.0",
-    "husky": "^9.0.11"
+    "@eslint/js": "^9.37.0",
+    "eslint": "^9.37.0",
+    "husky": "^9.0.11",
+    "prettier": "^3.6.2"
   },
   "scripts": {
     "prepare": "husky",
-    "commitlint": "commitlint --edit"
+    "commitlint": "commitlint --edit",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "type": "module"
 }
