--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,7 +1,7 @@
 name: Bug Report
 description: File a bug report
-title: "[Bug]: "
-labels: ["Issue:bug"]
+title: '[Bug]: '
+labels: ['Issue:bug']
 assignees:
   - <project_manager>
 body:
@@ -15,7 +15,7 @@ body:
       label: Description
       description: Also tell us, what did you expect to happen?
       placeholder: Tell us what you see!
-      value: "Describe the issue happened"
+      value: 'Describe the issue happened'
     validations:
       required: true
   - type: textarea
@@ -42,7 +42,7 @@ body:
       label: Steps to reproduce
       description: Please provide detailed steps for reproducing the issue.
       placeholder: Tell us how to reproduce the issue
-      value: "1. 2. 3."
+      value: '1. 2. 3.'
     validations:
       required: true
   - type: textarea
