--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -1,16 +1,15 @@
-name: Feature Request 
+name: Feature Request
 description: Request a feature or suggest us what is in your mind!
-title: "[Feature]: "
-labels: "Issue:feature"
+title: '[Feature]: '
+labels: 'Issue:feature'
 assignees:
-  - <project manager> 
+  - <project manager>
 body:
   - type: markdown
     attributes:
       value: |
         Please explain what is in your mind, we would like to hear it from you! 🤠
-      
-      
+
   - type: textarea
     id: explaining
     attributes:
@@ -19,12 +18,12 @@ body:
       placeholder: It's about...
     validations:
       required: true
-      
+
   - type: checkboxes
     id: terms
     attributes:
       label: Code of Conduct
       description: By submitting this issue, you agree to follow our [Code of Conduct](https://github.com/OPCODE-Open-Spring-Fest/template/blob/main/.github/Contributor_Guide/CODE_OF_CONDUCT.md)
       options:
-        - label: I agree to follow this project's Code of Conduct 
+        - label: I agree to follow this project's Code of Conduct
           required: true
