--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "scripts": {
     "dev": "nodemon src/index.js",
+    "generate:swagger": "node -e \"import('./src/utils/swagger.js').then(m => console.log(JSON.stringify(m.default, null, 2)))\" > swagger.json",
+    "predev": "npm run generate:swagger",
     "prepare": "husky",
     "commitlint": "commitlint --edit",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
@@ -25,6 +27,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
