--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
+    "morgan": "^1.10.1",
     "nodemon": "^3.1.10",
-    "readdirp": "^4.1.2"
+    "readdirp": "^4.1.2",
+    "winston": "^3.18.3"
   }
 }
