--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "nodemon": "^3.1.10",
-    "readdirp": "^4.1.2"
+    "readdirp": "^4.1.2",
+    "resend": "^6.1.3"
   }
 }
