--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@
 PORT=5000
 MONGO_URI=mongodb://root:admin@localhost:27017/
 JWT_SECRET=your_jwt_secret_here
+RESEND_API_KEY=""
+CORS_URL=http://localhost:5173
