--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "morgan": "^1.10.1",
     "nodemon": "^3.1.10",
     "readdirp": "^4.1.2",
-    "winston": "^3.18.3"
+    "winston": "^3.18.3",
     "resend": "^6.1.3"
   }
 }
