--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,33 @@
 node_modules
 
+# Environment variables
 .env
 .env.*.local
 .env.local
+.env.production
 
+# Build directories
 /dist/
 /build/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Docker volumes (if running locally)
+mongodb_data/
+mongodb_config/
